compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_literal_float.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1346
expression: "\npub fn go(x) {\n  case x {\n    <<1.4, b:int>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<1.4, b:int>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 64) {
    if (bitArraySliceToFloat(x, 0, 64, true) === 1.4) {
      if (x.bitSize === 72) {
        let b = x.byteAt(8);
        return 1;
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
