compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_rest_bits.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<_, b:bits>> -> b\n    _ -> x\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_, b:bits>> -> b
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 8) {
    let b = bitArraySlice(x, 8);
    return b;
  } else {
    return x;
  }
}
