compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_rest_bits_unaligned.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<_:5, b:bits>> -> b\n    _ -> x\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:5, b:bits>> -> b
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySlice } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 5) {
    let b = bitArraySlice(x, 5);
    return b;
  } else {
    return x;
  }
}
