compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_sized.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 475
expression: "\npub fn go(x) {\n  case x {\n    <<a:16, b:8>> -> a + b\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:16, b:8>> -> a + b
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 16) {
    if (x.bitSize === 24) {
      let a = bitArraySliceToInt(x, 0, 16, true, false);
      let b = x.byteAt(2);
      return a + b;
    } else {
      return 1;
    }
  } else {
    return 1;
  }
}
